# IS601_MidtermProject_Intelligent-Photocopier

./: .eleventy.js  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEFENSIVE_PROGRAMMING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_PHOTOCOPIER_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  add_frontmatter.py  bump_version.py  generate_site.py  index.md  netlify.toml  package.json  photocopier.db  pyproject.toml  quickstart.py  render.yaml  requirements-dev.txt  requirements.txt  start_api.sh  test.html
.github/workflows/: codeql.yml  quality.yml
Lessons/: courses.njk  docs.njk  index.njk
Lessons/A1-Defensive-Programming/: README.md  lesson-content.md  summary.md
Lessons/A1-Defensive-Programming-Template/: README.md  lesson-content.md  summary.md
Lessons/A1-Defensive-Programming-Template/reference/: best_practices.md  common_pitfalls.md  exercise_instructions.md  python_exceptions.md  quick_reference.md
Lessons/A1-Defensive-Programming-Template/solutions/: calculator_solution.md  practice_solution.md
Lessons/A1-Defensive-Programming-Template/tests/: calculator.py  test_calculator.py
Lessons/A1-Defensive-Programming/reference/: quick_reference.md
Lessons/A1-Defensive-Programming/tests/: calculator.py  config_loader.py  test_calculator.py  test_calculator_hardened.py  test_config_loader.py  test_config_loader_hardened.py
Lessons/A7-python-design-pattern/: README.md  lesson-content.md  summary.md
Lessons/A7-python-design-pattern/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/A7-python-design-pattern/solutions/: practice_solution.md
Lessons/B2/: README.md  lesson-content.md  summary.md
Lessons/B2-performance-optimization-and-profiling/: README.md  lesson-content.md  summary.md
Lessons/B2-performance-optimization-and-profiling/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/B2-performance-optimization-and-profiling/solutions/: practice_solution.md  practice_solution.py
Lessons/B2-performance-optimization-and-profiling/tests/: practice_module.py  test_practice.py
Lessons/B2/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/B2/tests/: practice_module.py  test_practice.py
Lessons/B5-regular-expressions-and-text-processing/: README.md  lesson-content.md  summary.md
Lessons/B5-regular-expressions-and-text-processing/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/B5-regular-expressions-and-text-processing/solutions/: practice_solution.md
Lessons/B5-regular-expressions-and-text-processing/tests/: practice_module.py  test_practice.py
Lessons/B5-sql-injection/: README.md  lesson-content.md  summary.md
Lessons/B5-sql-injection/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/B5-sql-injection/solutions/: practice_solution.md
Lessons/B9-big-data/: README.md  lesson-content.md  summary.md
Lessons/B9-big-data/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/B9-big-data/solutions/: practice_solution.md
Lessons/C6-working-with-thirdparty-libraries/: README.md  lesson-content.md  summary.md
Lessons/C6-working-with-thirdparty-libraries/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/C6-working-with-thirdparty-libraries/solutions/: practice_solution.md
Lessons/C6-working-with-thirdparty-libraries/tests/: practice_module.py  test_practice.py
Lessons/D1-docker-containerization-best-practices/reference/: quick_reference.md
Lessons/D1-docker-containerization-best-practices/solutions/: practice_solution.py
Lessons/F3-flask-api/: README.md  lesson-content.md  summary.md
Lessons/F3-flask-api/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/F3-flask-api/solutions/: practice_solution.md
Lessons/J1-javascript-learn/: README.md  lesson-content.md  summary.md
Lessons/J1-javascript-learn/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/J1-javascript-learn/solutions/: practice_solution.md
Lessons/J1-javascript-learning/: README.md  lesson-content.md  summary.md
Lessons/J1-javascript-learning/reference/: best_practices.md  exercise_instructions.md  quick_reference.md
Lessons/J1-javascript-learning/solutions/: practice_solution.md
Lessons/J2-javascript-learning/: README.md  lesson-content.md  summary.md
Lessons/J4-javascript-learning/: README.md  lesson-content.md  summary.md
Lessons/J5-javacript-learning/: README.md  lesson-content.md  summary.md
Lessons/P5-pandas-python/: README.md  lesson-content.md  summary.md
Lessons/S1-sql-injection/: README.md  lesson-content.md  summary.md
Lessons/S1-system-design/: README.md  lesson-content.md  summary.md
Lessons/S1-system-design-analysis/: README.md  lesson-content.md  summary.md
Lessons/Testing Example-docker-containerization/: summary.md
Lessons/Testing-Example-docker-containerization/: README.md  lesson-content.md  summary.md
Lessons/V1-vue-introduction/: README.md  lesson-content.md  summary.md
Lessons/Z2-html/: README.md  lesson-content.md  summary.md
Lessons/Z2-html/reference/: best_practices.md  (+2 more)
Lessons/Z4-fastapi-intro/: README.md  lesson-content.md  summary.md
Lessons/Z5-web-mining/: README.md  lesson-content.md  summary.md
Lessons/z1-html-css/: README.md  lesson-content.md  summary.md
_includes/: index.njk
_includes/layouts/: base.njk  course.njk
docs/: INTELLIGENT_PHOTOCOPIER_GUIDE.md  course-creation-workflow.md  eleventy-integration.md  implementation-journey.md  index.md  technical-architecture.md  troubleshooting.md  user-guide.md  version-management.md  versioning.md
src/intelligent_photocopier/: __init__.py  api.py  auth.py  config.py  content_analyzer.py  course_generator.py  demo.py  file_manager.py  main.py  models.py  template_extractor.py  test_api.py  test_components.py
tests/: test_api.py  test_course_generator.py  test_intelligent_photocopier.py  test_main_photocopier.py  test_main_script.py
(+52 files in other folders)
