[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-start-f25"
version = "0.1.0"
description = "Basic calculator demo with CLI"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["calculator", "teaching", "template"]

[project.scripts]
calc = "src.main:main"

[tool.setuptools]
packages = ["src", "src.operations"]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true
extend-exclude = '''
/(
    Lessons
)/
'''

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
extend_skip = ["Lessons"]

[tool.flake8]
max-line-length = 100
exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
  "Lessons/",
]
extend-ignore = [
  "E203",  # Black compatibility (whitespace before :)
  "W503",  # Line-break before binary operator (Black-compatible style)
]
per-file-ignores = [
  "__init__.py:F401",  # allow package re-exports
  "src/intelligent_photocopier/course_generator.py:E501",  # Long AI prompt strings
  "src/intelligent_photocopier/demo.py:E501",  # Long strings in demo
  "src/intelligent_photocopier/file_manager.py:E501",  # Long strings
  "quickstart.py:E501",  # Long strings
  "tests/test_*.py:E501",  # Long strings in tests
]
# Plugins installed (bugbear/comprehensions) will contribute additional checks automatically.

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["tests/", ".venv", "venv", "Lessons/"]
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-attributes = 10
max-parents = 7
max-public-methods = 20

[tool.pylint.reports]
score = false

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.pylint."messages control"]
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "C0301",  # line-too-long (handled by Black/flake8)
  "R0903",  # too-few-public-methods
  "R0801",  # duplicate-code (not useful in tiny projects)
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "df", "id"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=93",
  "--cov-config=pyproject.toml",
  "-q",
  "-ra"
]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "src/intelligent_photocopier/demo.py",
  "src/intelligent_photocopier/test_api.py",
  "src/intelligent_photocopier/test_components.py",
]

[tool.coverage.report]
# Exclude lines from coverage
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
exclude = [
  "tests/",
  "Lessons/",
  "src/intelligent_photocopier/demo.py",
  "src/intelligent_photocopier/test_api.py",
  "src/intelligent_photocopier/test_components.py",
]
