[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-photocopier"
version = "1.0.7"
description = "AI-powered course generator for programming education"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "education", "course-generator", "openai", "programming"]

[tool.setuptools]
packages = ["src.intelligent_photocopier"]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true
extend-exclude = '''
/(
    Lessons
)/
'''

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
extend_skip = ["Lessons"]

[tool.flake8]
max-line-length = 100
exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
  "Lessons/",
]
extend-ignore = [
  "E203",  # Black compatibility (whitespace before :)
  "W503",  # Line-break before binary operator (Black-compatible style)
]
per-file-ignores = [
  "__init__.py:F401",  # allow package re-exports
  "src/intelligent_photocopier/course_generator.py:E501",  # Long AI prompt strings
  "src/intelligent_photocopier/demo.py:E501",  # Long strings in demo
  "src/intelligent_photocopier/file_manager.py:E501",  # Long strings
  "quickstart.py:E501",  # Long strings
  "tests/test_*.py:E501",  # Long strings in tests
]
# Plugins installed (bugbear/comprehensions) will contribute additional checks automatically.

[tool.pylint.main]
py-version = "3.11"
ignore-paths = [
  "tests/",
  ".venv",
  "venv",
  "Lessons/",
  "src/intelligent_photocopier/demo.py",
  "src/intelligent_photocopier/test_api.py",
  "src/intelligent_photocopier/test_components.py",
  "quickstart.py",
]
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-attributes = 10
max-parents = 7
max-public-methods = 20

[tool.pylint.reports]
score = false

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.pylint."messages control"]
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "C0301",  # line-too-long (handled by Black/flake8)
  "C0415",  # import-outside-toplevel (we use lazy imports)
  "R0903",  # too-few-public-methods
  "R0801",  # duplicate-code (not useful in tiny projects)
  "R1705",  # no-else-return (stylistic choice)
  "W0107",  # unnecessary-pass (placeholder for future code)
  "W0404",  # reimported (intentional in some cases)
  "W0511",  # fixme/todo comments (tracked separately)
  "W0611",  # unused-import (false positives with conditional imports)
  "W0613",  # unused-argument (interface consistency)
  "W0621",  # redefined-outer-name (false positives)
  "W0718",  # broad-exception-caught (intentional for robustness)
  "W1203",  # logging-fstring-interpolation (acceptable style)
  "W1514",  # unspecified-encoding (not critical for our use case)
  "E0401",  # import-error (false positives with local imports)
  "C0413",  # wrong-import-position (intentional lazy imports)
  "C0103",  # invalid-name (some cases are intentional)
  "W0212",  # protected-access (testing private methods)
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "df", "id"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
norecursedirs = ["Lessons", "material_context", "_site"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=91",
  "--cov-config=pyproject.toml",
  "-q",
  "-ra",
  "--ignore=tests/test_intelligent_photocopier.py",
  "--ignore=tests/test_main_photocopier.py",
  "--ignore=tests/test_course_generator.py",
  "--ignore=tests/test_main_script.py"
]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "src/intelligent_photocopier/*",
]

[tool.coverage.report]
# Exclude lines from coverage
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = false  # Disabled due to inconsistent type stub availability
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
exclude = [
  "tests/",
  "Lessons/",
  "src/intelligent_photocopier/demo.py",
  "src/intelligent_photocopier/test_api.py",
  "src/intelligent_photocopier/test_components.py",
]

[[tool.mypy.overrides]]
module = "github"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bcrypt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt"
ignore_missing_imports = true
